# generative-ui-demo

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.js
demo/: index.html  main.ts  style.css
demo/backend/: .env.example  main.py  pyproject.toml
demo/frontend/: main.ts  package.json  vite.config.ts
openspec/: project.md
openspec/changes/archive/2026-03-17-fix-widget-dark-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-17-fix-widget-dark-mode/specs/widget-theming/: spec.md
openspec/changes/archive/2026-03-17-improve-demo-ux/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-17-improve-demo-ux/specs/demo-markdown/: spec.md
openspec/changes/archive/2026-03-17-improve-demo-ux/specs/widget-loading/: spec.md
openspec/changes/archive/2026-03-18-add-runtime-theme-switch/: proposal.md  tasks.md
openspec/changes/archive/2026-03-18-add-runtime-theme-switch/specs/widget-theming/: spec.md
openspec/changes/archive/2026-03-20-refactor-sdk-split/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-refactor-sdk-split/specs/demo-app/: spec.md
openspec/specs/demo-app/: spec.md
openspec/specs/demo-markdown/: spec.md
openspec/specs/js-client/: spec.md
openspec/specs/python-sdk/: spec.md
openspec/specs/widget-loading/: spec.md
openspec/specs/widget-theming/: spec.md
server/: api.ts
src/: streaming.ts  tools.ts  types.ts
src/adapters/: anthropic.ts  index.ts  openai.ts
(+2 files in other folders)
