[project]
name = "generative-ui-demo"
version = "0.1.0"
description = "Demo app for generative-ui: FastAPI backend + vanilla JS frontend"
requires-python = ">=3.9"
dependencies = [
    "generative-ui",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
]

[tool.uv.sources]
generative-ui = { path = "../../packages/python" }
